fixed incompatibility caused by merge - seperated accounts routing into new file

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -29,6 +29,6 @@
 <span>
     Already have an account?
     <br/>
-    <a href="{{ url_for('main.login') }}">Log in here!</a>
+    <a href="{{ url_for('accounts.login') }}">Log in here!</a>
 </span>
 {% endblock %}
