--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<h1>Hello World!</h1>
+<h1>profile</h1>
+<div>
+    <h2>account details:</h2>
+    <p>email: {{ redacted_email }}</p>
+</div>
 {% endblock %}
