--- a/app/templates/search_results_page.html
+++ b/app/templates/search_results_page.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    {% include "top_bar_search.html" %}
+    {% include "top_bar_search_template.html" %}
 
     <div id="videos"></div>
 
