--- a/app/static/styles/profile.css
+++ b/app/static/styles/profile.css
@@ -6,30 +6,31 @@
 }
 
 h1 {
+    text-align: center;
     font-size: 48px;
     margin: 30px 0 40px;
 }
 
 h2 {
+    text-align: center;
     font-size: 32px;
     margin: 30px 0;
 }
 
 section {
-    display: block;
-    width: 100%;
-    margin-bottom: 60px;
+    width: fit-content;
+    margin: 0 auto 60px;
 }
 
 section p {
-    margin-bottom: 30px;
+    width: fit-content;
+    margin: 0 auto 40px;
 }
 
 section span {
     padding: 5px 10px;
     border: 1px solid #ddd;
     background-color: #eee;
-    margin-inline: 5px 15px;
 }
 
 section p a.button {
@@ -40,4 +41,8 @@ section p a.button {
     border: 1px solid #ddd;
     background-color: #eee;
     border-radius: 25px;
+}
+
+section p a.button:last-child {
+    margin-right: 0;
 }
