--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -2,8 +2,32 @@
 
 {% block head %}
 <title>yt - change password</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/auth.css') }}">
 {% endblock %}
 
 {% block content %}
-<h1>Hello World!</h1>
+<h1>Change your password</h1>
+<form id="signupForm">
+    <div class="form-item">
+        <label for="email">Re-enter your Email</label>
+        <input type="text" placeholder="Enter email..." name="email">
+    </div>
+    <span id="emailErrorMessage" class="hidden"></span>
+    <div class="form-item">
+        <label for="current-password">Current password</label>
+        <input type="password" placeholder="Enter current password..." name="current-password">
+    </div>
+    <span id="currentPasswordErrorMessage" class="hidden"></span>
+    <div class="form-item">
+        <label for="new-password">New password</label>
+        <input type="password" placeholder="Enter new password..." name="new-password">
+    </div>
+    <span id="newPasswordErrorMessage" class="hidden"></span>
+    <div class="form-item">
+        <label for="new-password2">Re-enter your new password</label>
+        <input type="password" placeholder="Re-enter new password..." name="new-password2">
+    </div>
+    <span id="newPassword2ErrorMessage" class="hidden"></span>
+    <button type="submit">Change password</button>
+</form> 
 {% endblock %}
