--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <h1>Change your password</h1>
-<form id="signupForm">
+<form id="changePasswordForm">
     <div class="form-item">
         <label for="email">Re-enter your Email</label>
         <input type="text" placeholder="Enter email..." name="email">
