--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <h1>Change your password</h1>
-<form id="signupForm">
+<form id="ChangePasswordForm">
     <span id="emailErrorMessage" class="hidden"></span>
     <div class="form-item">
         <label for="current-password">Current password</label>
