--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -3,27 +3,27 @@
 {% block head %}
 <title>yt - change password</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/auth.css') }}">
+<script defer src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
 {% endblock %}
 
 {% block content %}
 <h1>Change your password</h1>
-<form id="ChangePasswordForm">
-    <span id="emailErrorMessage" class="hidden"></span>
+<form id="changePasswordForm">
     <div class="form-item">
         <label for="current-password">Current password</label>
         <input type="password" placeholder="Enter current password..." name="current-password">
     </div>
-    <span id="currentPasswordErrorMessage" class="hidden"></span>
+    <span id="passwordErrorMessage" class="hidden"></span>
     <div class="form-item">
         <label for="new-password">New password</label>
         <input type="password" placeholder="Enter new password..." name="new-password">
     </div>
-    <span id="newPasswordErrorMessage" class="hidden"></span>
+    <span id="password2ErrorMessage" class="hidden"></span>
     <div class="form-item">
         <label for="new-password2">Re-enter your new password</label>
         <input type="password" placeholder="Re-enter new password..." name="new-password2">
     </div>
-    <span id="newPassword2ErrorMessage" class="hidden"></span>
+    <span class="hidden"></span>
     <button type="submit">Change password</button>
 </form> 
 {% endblock %}
