--- a/app/templates/change_email.html
+++ b/app/templates/change_email.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Change your password</h1>
+<h1>Change your email</h1>
 <form id="changeEmailForm">
     <div class="form-item">
         <label for="current-email">Current email</label>
