preserve the return URL when switching between login and signup

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,6 +24,6 @@
 <span>
     Don't have an account?
     <br/>
-    <a href="{{ url_for('accounts.signup') }}">Sign up here!</a>
+    <a href="#" onclick="redirectPreservingParams('{{ url_for('accounts.signup') }}'); return false;">Sign up here!</a>
 </span>
 {% endblock %}
