adjusted frontend to implement working subscribe button logic

--- a/app/static/styles/channel_overview.css
+++ b/app/static/styles/channel_overview.css
@@ -103,7 +103,7 @@
     transition: background-color 0.1s;
 }
 
-.channel-banner #subscribe-button.subscribe {
+.channel-banner #subscribe-button.notSubscribed {
     background-color: #202020;
     color: white;
 }
