--- a/app/templates/change_email.html
+++ b/app/templates/change_email.html
@@ -23,6 +23,9 @@
         <input type="password" placeholder="Enter password..." name="password">
     </div>
     <span id="passwordErrorMessage" class="hidden"></span>
-    <button type="submit">Change email</button>
-</form> 
+    <div class="flex">
+        <button type="submit">Change email</button>
+        <a class="button" href="{{ url_for('accounts.profile') }}"><button>Cancel</button></a>
+    </div>
+</form>
 {% endblock %}
