--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -24,6 +24,9 @@
         <input type="password" placeholder="Re-enter new password..." name="new-password2">
     </div>
     <span class="hidden"></span>
-    <button type="submit">Change password</button>
+    <div class="flex">
+        <button type="submit">Change password</button>
+        <a class="button" href="{{ url_for('accounts.profile') }}">Cancel</a>
+    </div>
 </form> 
 {% endblock %}
