fixed cancel button style

--- a/app/templates/change_email.html
+++ b/app/templates/change_email.html
@@ -25,7 +25,7 @@
     <span id="passwordErrorMessage" class="hidden"></span>
     <div class="flex">
         <button type="submit">Change email</button>
-        <a class="button" href="{{ url_for('accounts.profile') }}"><button>Cancel</button></a>
+        <a class="button" href="{{ url_for('accounts.profile') }}">Cancel</a>
     </div>
 </form>
 {% endblock %}
