--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+{% include "top_bar_template.html" %}
 <h1>My Account</h1>
 <section>
     <h2>Account Details</h2>
