changed to top bar with search bar for the channel page

--- a/app/templates/channel_overview.html
+++ b/app/templates/channel_overview.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block content %}
-    {% include "top_bar_template.html" %}
+    {% include "top_bar_search_template.html" %}
     <div class="channel-banner">
         <img src="{{ channel_info.banner }}">
         <div id="profile-info">
