--- a/app/templates/content_filters.html
+++ b/app/templates/content_filters.html
@@ -13,8 +13,9 @@
             Author ID: {{ pack.author_id }}<br>
             Public: {{ 'Yes' if pack.is_public else 'No' }}<br>
             {% if pack.is_author %}
-                Created by you.
+                Created by you.<br>
             {% endif %}
+            Enabled: {{ 'Yes' if pack.is_enabled else 'No' }}
         </li>
     {% else %}
         <li>No content packs found.</li>
