Removed unused html field; changed function name.

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -17,7 +17,7 @@
     <p>
         <a href="{{ url_for('accounts.change_email') }}" class="button">Change Email</a>
         <a href="{{ url_for('accounts.change_password') }}" class="button">Change Password</a>
-        <a href="{{ url_for('social.list_content_packs') }}" class="button">Content Packs</a>
+        <a href="{{ url_for('social.user_content_packs') }}" class="button">Content Packs</a>
     </p>
 </section>
 {% endblock %}
