--- a/app/templates/content_filters.html
+++ b/app/templates/content_filters.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>yt - Content Filters</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/content_filters.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -11,7 +12,7 @@
 </form>
 <ul>
     {% for pack in content_packs %}
-        <li>
+        <li class="{% if pack.is_enabled %}enabled{% else %}disabled{% endif %}">
             <strong>{{ pack.name }}</strong><br>
             Public: {{ 'Yes' if pack.is_public else 'No' }}<br>
             {% if pack.is_author %}
