--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="auth-container">
 <h1>Login</h1>
 <form id="loginForm">
     <div class="form-item">
@@ -26,4 +27,5 @@
     <br/>
     <a href="#" onclick="redirectPreservingParams('{{ url_for('accounts.signup') }}'); return false;">Sign up here!</a>
 </span>
+</div>
 {% endblock %}
