--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="auth-container">
 <h1>Sign Up</h1>
 <form id="signupForm">
     <div class="form-item">
@@ -31,4 +32,5 @@
     <br/>
     <a href="#" onclick="redirectPreservingParams('{{ url_for('accounts.login') }}'); return false;">Log in here!</a>
 </span>
+</div>
 {% endblock %}
