--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -55,12 +55,6 @@ body {
     text-decoration: underline 1px;
 }
 
-
-
-
-
-
-
 /* styles a floating top bar with a search box */
 
 .top-bar {
@@ -255,4 +249,67 @@ body {
     width: fit-content;
     height: 18px;
     margin: -5px auto 15px;
+}
+
+
+
+/* Profile Page */
+
+.profile-container {
+    display: block;
+    height: 100vh;
+    margin: 4vw auto;
+    width: 90%;
+    min-height: calc(100vh - 4vw * 2);
+    height: fit-content;
+}
+
+.profile-container h1 {
+    text-align: center;
+    font-size: 48px;
+    margin: 30px 0 40px;
+}
+
+.profile-container h2 {
+    text-align: center;
+    font-size: 32px;
+    margin: 30px 0;
+}
+
+.profile-container section {
+    width: fit-content;
+    margin: 0 auto 60px;
+}
+
+.profile-container section p {
+    width: fit-content;
+    margin: 0 auto 40px;
+}
+
+.profile-container section span {
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    background-color: #eee;
+}
+
+.profile-container section p a.button {
+    color: black;
+    text-decoration: none;
+    margin-right: 15px;
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    background-color: #eee;
+    border-radius: 25px;
+}
+
+.profile-container section p a.button:last-child {
+    margin-right: 0;
+}
+
+.profile-container #logout-button {
+    background-color: #e33;
+    border-color: #c11;
+    color: white;
+    border-radius: 0;
+    margin-left: 4px;
 }
