Implement saving UserFilter records.

--- a/app/templates/edit_filter.html
+++ b/app/templates/edit_filter.html
@@ -7,13 +7,19 @@
 {% block content %}
 
 <form action="/edit_filter/{{ pack_id }}" method="post">
+  {% if is_duplicate_id_error %} 
+    <p style="color: red;">Error: Duplicate ID detected.</p> 
+  {% endif %}
   <label for="id">Enter id:</label>
-  <input type="text" id="id" name="id" required><br><br>
+  <input type="text" id="id" name="id" required>
+  <br><br>
   
   <label><input type="checkbox" name="is_channel_id" value="true"> is_channel_id</label><br>
   <label><input type="checkbox" name="is_blacklist_filter" value="true"> is_blacklist_filter</label><br><br>
   
   <input type="submit" value="Submit">
 </form>
-
+{% for filter in user_filters %}
+  <li>{{ filter.user_id }} - {{ filter.content_pack_id }} - {{ filter.is_blacklist_filter }} - {{ filter.is_channel_id }} - {{ filter.youtube_id }}</li>
+{% endfor %}
 {% endblock %}
