--- a/app/templates/change_email.html
+++ b/app/templates/change_email.html
@@ -2,10 +2,10 @@
 
 {% block head %}
 <title>yt - change email</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='styles/auth.css') }}">
 {% endblock %}
 
 {% block content %}
+<div class="auth-container">
 <h1>Change your email</h1>
 <form id="changeEmailForm">
     <div class="form-item">
@@ -28,4 +28,5 @@
         <button type="submit">Change email</button>
     </div>
 </form>
+</div>
 {% endblock %}
