--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -2,11 +2,11 @@
 
 {% block head %}
 <title>yt - change password</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='styles/auth.css') }}">
 <script defer src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
 {% endblock %}
 
 {% block content %}
+<div class="auth-container">
 <h1>Change your password</h1>
 <form id="changePasswordForm">
     <div class="form-item">
@@ -28,5 +28,6 @@
         <a class="button" href="{{ url_for('accounts.profile') }}">Cancel</a>
         <button type="submit">Change password</button>
     </div>
-</form> 
+</form>
+</div>
 {% endblock %}
