--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -297,22 +297,32 @@ p, span, h1, h2, h3, h4, h5, h6 {
     margin: 30px 0;
 }
 
+.profile-container h3 {
+    text-align: center;
+    font-size: 20px;
+    margin: 30px 0;
+}
+
 .profile-container section {
     width: fit-content;
     margin: 0 auto 60px;
 }
 
-.profile-container section p {
+.profile-container section > form > *,
+.profile-container section > :not(h2) {
     width: fit-content;
     margin: 0 auto 40px;
 }
 
+.profile-container section input[type="text"],
+.profile-container section input[type="password"],
 .profile-container section span {
     padding: 5px 10px;
     border: 1px solid color-mix(in srgb, var(--color-light) 80%, var(--color-dark) 20%);
     background-color: var(--color-light);
 }
 
+.profile-container section input[type="submit"],
 .profile-container section p a.button {
     color: var(--color-dark);
     text-decoration: none;
@@ -321,6 +331,14 @@ p, span, h1, h2, h3, h4, h5, h6 {
     border: 1px solid color-mix(in srgb, var(--color-light) 80%, var(--color-dark) 20%);
     background-color: var(--color-light);
     border-radius: 25px;
+}
+
+.profile-container section input[type="submit"] {
+    margin-right: 0;
+}
+
+.profile-container section input[type="submit"]:hover {
+    cursor: pointer;
 }
 
 .profile-container section p a.button:last-child {
