--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,6 +9,20 @@
 <div class="profile-container">
 <h1>My Account</h1>
 <section>
+    <h2>Preferences</h2>
+    <form action="#">
+        <p></p>
+        <p>
+            Theme:
+            <input type="radio" id="light-theme" name="theme" value="light">
+            <label for="light-theme">Light</label>
+            <input type="radio" id="dark-theme" name="theme" value="dark">
+            <label for="dark-theme">Dark</label>
+        </p>
+        <p>
+            <input type="submit" value="Confirm Selection">
+        </p>
+    </form>
     <h2>Account Details</h2>
     <p>
         Email: <span>{{ redacted_email }}</span>
