--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -14,6 +14,7 @@
 :root {
     font-size: 16px;
     font-family: Arial, sans-serif;
+    color: var(--color-dark);
 }
 
 :root * {
@@ -472,6 +473,38 @@ p, span, h1, h2, h3, h4, h5, h6 {
     color: var(--color-light);
     border-radius: 0;
     margin-left: 4px;
+}
+
+/* Custom theme editor */
+
+form#custom-theme .color-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+form#custom-theme h2 {
+    width: 100%;
+}
+
+form#custom-theme label {
+    display: block;
+    width: fit-content;
+}
+
+form#custom-theme span {
+    display: block;
+    width: fit-content;
+}
+
+form#custom-theme input {
+    display: block;
+}
+
+#custom-theme .submitter * {
+    margin-bottom: 1rem;
 }
 
 
